--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,7 +2,7 @@ html {
     font-size: 62.5%;
 }
 
-@media (max-width: 75em) {
+@media (max-width: 1199px) {
     html {
         font-size: 56.25%;
     }
