--- a/src/styles/pages/_realestate.scss
+++ b/src/styles/pages/_realestate.scss
@@ -22,8 +22,14 @@ html::-webkit-scrollbar {
     background-color: $white;
 
     & header.realEstate_header {
-        @include for-xsmall-desktop-only {
-            
+        @include for-big-desktop-up {
+            background-image: url("../images/REALTY/desktop/1800b.png");
+        }
+        @include for-big-desktop-only {
+            background-image: url("../images/REALTY/desktop/1800b.png");
+        }
+        @media (min-width: 1504px) and (max-width: 1799px) {
+            background-image: url("../images/REALTY/desktop/1504.png");
         }
         @include for-tablet-landscape-only-mod {
             background-image: url("../images/REALTY/desktop/900.png");
@@ -48,7 +54,7 @@ html::-webkit-scrollbar {
 
         // }
         @media (min-width: 1024px) and (max-width: 1199px) {
-            height: 108vh
+            height: 100vh
         }
 
         & nav {
@@ -72,6 +78,242 @@ html::-webkit-scrollbar {
                 }
                 @include for-tablet-landscape-only {
                     display: none;
+                }
+
+                @include for-big-desktop-up {
+                    display: flex;
+                    flex-direction: row;
+                    font-family: 'GT Super Ds Trial Bd';
+                    // font-size: 17px;
+                    color: $decoration;
+                    z-index: 100;
+                    position: absolute;
+                    right: 0;
+                    // padding-top: 25px;
+                    padding-right: 3.5%;
+                    width: 100%;
+                    padding-left: 3.5%;
+
+                        // MOBILE
+                    & ul {
+                        display: flex;
+                        flex-direction: row;
+                        width: 100%;
+                        list-style: none;
+                        padding: 0;
+                        margin: 0 0 1.45rem 1.45rem;
+
+                        & li {
+                            font-family: 'GT Super Ds Trial Bd';
+                            margin: 1.4rem;
+                            padding-left: 0;
+                            font-size: 1.9rem;
+                            margin: 1rem;
+
+                            & a {
+                                color: $decoration;
+                                margin-bottom: 0;
+                                position: relative;
+                                padding: 10px 10px 20px;
+                                margin-top: 20px;
+                                text-decoration: none;
+                                transition: .5s;
+                                // border-bottom: 2px solid #001a7d;
+
+                                    padding: 5px 3px 15px;
+                            }
+
+                            & a::after {
+                                position: absolute;
+                                content: "";
+                                width: 100%;
+                                height: 2px;
+                                top: 100%;
+                                left: 0;
+                                background: #001a7d;
+                                transition: transform .5s;
+                                transform: scaleX(0);
+                                transform-origin: right;
+                            }
+                        }
+                    }
+                }
+
+                @include for-big-desktop-only {
+                    display: flex;
+                    flex-direction: row;
+                    font-family: 'GT Super Ds Trial Bd';
+                    // font-size: 17px;
+                    color: $decoration;
+                    z-index: 100;
+                    position: absolute;
+                    right: 0;
+                    // padding-top: 25px;
+                    padding-right: 3.5%;
+                    width: 100%;
+                    padding-left: 3.5%;
+
+                        // MOBILE
+                    & ul {
+                        display: flex;
+                        flex-direction: row;
+                        width: 100%;
+                        list-style: none;
+                        padding: 0;
+                        margin: 0 0 1.45rem 1.45rem;
+
+                        & li {
+                            font-family: 'GT Super Ds Trial Bd';
+                            margin: 1.4rem;
+                            padding-left: 0;
+                            font-size: 1.9rem;
+                            margin: 1rem;
+
+                            & a {
+                                color: $decoration;
+                                margin-bottom: 0;
+                                position: relative;
+                                padding: 10px 10px 20px;
+                                margin-top: 20px;
+                                text-decoration: none;
+                                transition: .5s;
+                                // border-bottom: 2px solid #001a7d;
+
+                                    padding: 5px 3px 15px;
+                            }
+
+                            & a::after {
+                                position: absolute;
+                                content: "";
+                                width: 100%;
+                                height: 2px;
+                                top: 100%;
+                                left: 0;
+                                background: #001a7d;
+                                transition: transform .5s;
+                                transform: scaleX(0);
+                                transform-origin: right;
+                            }
+                        }
+                    }
+                }
+
+                @include for-medium-desktop-only {
+                    display: flex;
+                    flex-direction: row;
+                    font-family: 'GT Super Ds Trial Bd';
+                    // font-size: 17px;
+                    color: $decoration;
+                    z-index: 100;
+                    position: absolute;
+                    right: 0;
+                    // padding-top: 25px;
+                    padding-right: 3.5%;
+                    width: 100%;
+                    padding-left: 3.5%;
+
+                        // MOBILE
+                    & ul {
+                        display: flex;
+                        flex-direction: row;
+                        width: 100%;
+                        list-style: none;
+                        padding: 0;
+                        margin: 0 0 1.45rem 1.45rem;
+
+                        & li {
+                            font-family: 'GT Super Ds Trial Bd';
+                            margin: 1.4rem;
+                            padding-left: 0;
+                            font-size: 1.9rem;
+                            margin: 1rem;
+
+                            & a {
+                                color: $decoration;
+                                margin-bottom: 0;
+                                position: relative;
+                                padding: 10px 10px 20px;
+                                margin-top: 20px;
+                                text-decoration: none;
+                                transition: .5s;
+                                // border-bottom: 2px solid #001a7d;
+
+                                    padding: 5px 3px 15px;
+                            }
+
+                            & a::after {
+                                position: absolute;
+                                content: "";
+                                width: 100%;
+                                height: 2px;
+                                top: 100%;
+                                left: 0;
+                                background: #001a7d;
+                                transition: transform .5s;
+                                transform: scaleX(0);
+                                transform-origin: right;
+                            }
+                        }
+                    }
+                }
+
+                @include for-small-desktop-only {
+                    display: flex;
+                    flex-direction: row;
+                    font-family: 'GT Super Ds Trial Bd';
+                    // font-size: 17px;
+                    color: $decoration;
+                    z-index: 100;
+                    position: absolute;
+                    right: 0;
+                    // padding-top: 25px;
+                    padding-right: 3.5%;
+                    width: 100%;
+                    padding-left: 3.5%;
+
+                        // MOBILE
+                    & ul {
+                        display: flex;
+                        flex-direction: row;
+                        width: 100%;
+                        list-style: none;
+                        padding: 0;
+                        margin: 0 0 1.45rem 1.45rem;
+
+                        & li {
+                            font-family: 'GT Super Ds Trial Bd';
+                            margin: 1.4rem;
+                            padding-left: 0;
+                            font-size: 1.9rem;
+                            margin: 1rem;
+
+                            & a {
+                                color: $decoration;
+                                margin-bottom: 0;
+                                position: relative;
+                                padding: 10px 10px 20px;
+                                margin-top: 20px;
+                                text-decoration: none;
+                                transition: .5s;
+                                // border-bottom: 2px solid #001a7d;
+
+                                    padding: 5px 3px 15px;
+                            }
+
+                            & a::after {
+                                position: absolute;
+                                content: "";
+                                width: 100%;
+                                height: 2px;
+                                top: 100%;
+                                left: 0;
+                                background: #001a7d;
+                                transition: transform .5s;
+                                transform: scaleX(0);
+                                transform-origin: right;
+                            }
+                        }
+                    }
                 }
 
                 @include for-xsmall-desktop-only {
@@ -166,6 +408,20 @@ html::-webkit-scrollbar {
                     width: 236px;
                     height: 61px;
 
+                    @media (min-width: 1366px) {
+                        height: unset;
+                    }
+                    @include for-big-desktop-only {
+                        width: 280px;
+                    }
+                    @include for-medium-desktop-only {
+                        width: 250px;
+                    }
+                    @include for-small-desktop-only {
+                        width: 200px;
+                        
+                    }
+
                     @include for-xsmall-desktop-only {
                         width: 190px;
                         height: unset;
@@ -204,8 +460,12 @@ html::-webkit-scrollbar {
                         letter-spacing: inherit;
                         line-height: 1.2;
 
+                        @media (min-width: 1366px) {
+                            font-size: 1.71rem;
+                        }
                         @include for-xsmall-desktop-only {
                             font-size: 1.71rem;
+                            
                         }
 
                     }
@@ -276,6 +536,18 @@ html::-webkit-scrollbar {
                             font-size: 5.5rem;
                         }
 
+                        @include for-big-desktop-only {
+                            font-size: 5.2rem;
+                        }
+
+                        @include for-medium-desktop-only {
+                            font-size: 5rem;
+                        }
+
+                        @include for-small-desktop-only {
+                            font-size: 4.95rem;
+                        }
+
                         @include for-xsmall-desktop-only {
                             font-size: 4.95rem;
                         }
@@ -301,6 +573,18 @@ html::-webkit-scrollbar {
 
                         @media (min-width: 901px) {
                             font-size: 2rem;
+                        }
+
+                        @include for-big-desktop-only {
+                            font-size: 1.95rem;
+                        }
+
+                        @include for-medium-desktop-only {
+                            font-size: 1.90rem;
+                        }
+
+                        @include for-small-desktop-only {
+                            font-size: 1.9rem;
                         }
 
                         @include for-xsmall-desktop-only {
@@ -336,6 +620,18 @@ html::-webkit-scrollbar {
                 flex-direction: column;
                 overflow: hidden;
                 margin-top: 8rem;
+                @include for-big-desktop-up  {
+                    border-radius: 0% 0% 45%;
+                    border-bottom: 10px solid $blue;
+                }
+                @include for-big-desktop-only  {
+                    border-radius: 0% 0% 45%;
+                    border-bottom: 10px solid $blue;
+                }
+
+                @media (min-width: 1600px) {
+                    margin-top: 4rem;
+                }
 
                 & .realEstate_headImage {
                     display: flex;
@@ -354,6 +650,9 @@ html::-webkit-scrollbar {
                             width: 1300px;
                             height: 731px;
                             transform: translateX(-180px) translateY(5px);
+                            @media (min-width: 1600px) {
+                                transform: unset;
+                            }
                         }
                     }
                 }
@@ -388,6 +687,9 @@ html::-webkit-scrollbar {
                 }
 
                 & div.realty__image {
+                    @include for-tablet-landscape-only {
+                        height: 60.7975rem;
+                    }
 
                     & .realty__image-svgOne {
                         display: flex;
@@ -404,6 +706,11 @@ html::-webkit-scrollbar {
                         &#realty__image-svgOne-two {
                             left: 0;
                             right: unset;
+
+                            @include for-tablet-landscape-only {
+                                width: 100px;
+                                height: 149px;
+                            }
                         }
 
                         &.svgabout-2 {
@@ -426,6 +733,10 @@ html::-webkit-scrollbar {
                         position: absolute;
                         left: 400px;
                         bottom: 0;
+
+                        @include for-tablet-landscape-only {
+                            display: none;
+                        }
                     }
 
 
@@ -476,6 +787,10 @@ html::-webkit-scrollbar {
                             text-align: left;
                             letter-spacing: 0.45px;
                             //   width: 60%;
+
+                            @include for-tablet-landscape-only {
+                                font-size: 2.2rem;
+                            }
 
                             &#realty__text-container {
                                 margin-left: -8rem;
@@ -562,6 +877,16 @@ html::-webkit-scrollbar {
 
 .ws_images>div {
     border-radius: 25% 0 50% 5%;
+    @include for-big-desktop-up  {
+        border-radius: 50% 2% 0%;
+    }
+    @include for-big-desktop-only  {
+        border-radius: 50% 2% 0%;
+    }
+
+    @media (min-width: 1600px) {
+        border-radius: 50% 6%;
+    }
 
     @include for-xsmall-desktop-only {
         border-radius: 50% 0% 50% 35%;
@@ -573,4 +898,72 @@ html::-webkit-scrollbar {
 }
 .ws-title {
     display: none!important;
+}
+
+main.investment_service {
+    @include for-tablet-landscape-only {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    max-width: 100%;
+
+    & section.investment_service-main {
+        margin: 5rem 0 6.3rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        // margin: 5rem 0 6rem;
+        width: 100%;
+
+        & div.investment_service-inner_img {
+            width: 60%;
+
+            & div.investment_service-image {
+                max-width: 600px;
+                max-height: 308px;
+                background-image: url("../images/REALTY/desktop/invest.jpg");
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        }
+
+        & div.investment_service-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+
+            & div.investment_service-header {
+                color: $bluethick;
+
+                & h1 {
+                    color: inherit;
+                    font-family: "GT Super Ds Trial Bd";
+                    font-weight: bold;
+                    text-align: left;
+                    letter-spacing: 0.45px;
+                    font-size: 3.75rem;
+                    text-transform: uppercase;
+                    margin-block-start: 0;
+                }
+            }
+
+            & div.investment_service-text {
+               display: flex;
+
+                & p {
+                    font-family: "Ginto regular";
+                    font-weight: normal;
+                    text-align: left;
+                    letter-spacing: 0.45px;
+                    font-size: 20px;
+                    -webkit-margin-before: 0;
+                    margin-block-start: 0;
+                    font-size: 2.5rem;
+                    color: #000;
+                }
+            }
+        }
+    }
+    }
+
 }
